force-app/main/default/objects/BasiqEntityTransaction__c/BasiqEntityTransaction__c.object-meta.xml
<CustomObject>
    <label>Basiq Entity Transaction (Obsolete)</label>
    <nameField>
        <label>Basiq Entity Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Basiq Entity Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>