force-app/main/default/objects/BasiqEntityTransaction__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Basiq Entity Account</label>
    <referenceTo>BasiqEntityAccount__c</referenceTo>
    <relationshipName>Basiq_Entity_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>