force-app/main/default/objects/BasiqEntityTransaction__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>