force-app/main/default/objects/BasiqEntityTransaction__c/fields/BankCategory__c.field-meta.xml
<CustomField>
    <fullName>BankCategory__c</fullName>
    <label>Bank Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>