force-app/main/default/objects/BasiqEntityTransaction__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <length>80</length>
    <type>Text</type>
</CustomField>