force-app/main/default/objects/BasiqEntityTransaction__c/fields/PostDate__c.field-meta.xml
<CustomField>
    <fullName>PostDate__c</fullName>
    <label>Post Date</label>
    <length>80</length>
    <type>Text</type>
</CustomField>