force-app/main/default/objects/BasiqEntityTransaction__c/fields/Subclass__c.field-meta.xml
<CustomField>
    <fullName>Subclass__c</fullName>
    <label>Subclass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>