force-app/main/default/objects/BasiqEntityTransaction__c/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <label>Transaction Date</label>
    <length>80</length>
    <type>Text</type>
</CustomField>